# ai-trader

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 0001_initial.py  0002_phase1_schema.py  0003_scheduler_state.py  0004_drop_news_url_unique.py  0005_news_summary_sentiment.py
app/core/: __init__.py  db.py  logger.py
app/crud/: __init__.py  decision.py  llm_call.py  news.py  scheduler_state.py  transaction.py  user.py  wallet.py
app/models/: __init__.py  base.py  decision.py  enums.py  llm_call.py  news.py  scheduler_state.py  transaction.py  user.py  wallet.py
app/services/: fx.py
app/services/agents/: __init__.py  base.py  news_agent.py  price_agent.py  trader_agent.py
app/services/binance/: __init__.py  client.py  exchange_info.py  prices.py
app/services/llm/: __init__.py  embeddings.py  openrouter.py
app/services/metrics/: __init__.py  pnl.py
app/services/mock_exchange/: __init__.py  executor.py  fees.py
app/services/news/: __init__.py  coindesk.py  cryptopanic.py  deduplicator.py  rag.py  storage.py
docs/: architecture.md  clarifications.md  idea.md
docs/other/: api-table.md  stock-price.md  trading-info.md
scripts/: entrypoint.sh  init_user.py
tests/: conftest.py
tests/fixtures/: binance_klines_1h.json  coindesk_news_articles.json  cryptopanic_posts.json  openrouter_chat_response.json  openrouter_embedding_response.json
tests/unit/: test_config_scheduler.py
(+50 files in other folders)
