[tool.poetry]
name = "ai-trader"
version = "0.1.0"
description = "AI-команда из 3 агентов для mock-трейдинга на Binance public API"
authors = ["AI Trader Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"
httpx = "^0.27.2"
aiogram = "^3.15.0"
apscheduler = "^3.10.4"
pgvector = "^0.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
testcontainers = {extras = ["postgres"], version = "^4.8.2"}

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
